<resources>
    <string name="app_name">Newsboy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search...</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="connection_error">Connection Error...</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="newsboy_times">Newsboy Times</string>
    <string name="breaking_news">Breaking News</string>
    <string name="entertainment">Entertainment</string>
    <string name="science">Science</string>
    <string name="education">Education</string>
    <string name="money">Money</string>
    <string name="technology">Technology</string>
    <string name="crime">Crime</string>
    <string name="politics">Politics</string>
    <string name="save_article">Save article</string>
</resources>