<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sr_swipe_refresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.NewsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.NewsFragment"
        android:elevation="1dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_news"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <HorizontalScrollView
            android:id="@+id/category_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@color/lightGray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/category_chip_group"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:checkedChip="@+id/category_breaking"
                    app:selectionRequired="true"
                    app:singleLine="true"
                    app:singleSelection="true">

                    <com.google.android.material.chip.Chip
                        style="@style/NewsChipStyle"
                        android:id="@+id/category_breaking"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/breaking_news"/>

                    <com.google.android.material.chip.Chip
                        style="@style/NewsChipStyle"
                        android:id="@+id/category_entertainment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/entertainment"/>

                    <com.google.android.material.chip.Chip
                        style="@style/NewsChipStyle"
                        android:id="@+id/category_science"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/science"/>

                    <com.google.android.material.chip.Chip
                        style="@style/NewsChipStyle"
                        android:id="@+id/category_education"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/education"/>

                    <com.google.android.material.chip.Chip
                        style="@style/NewsChipStyle"
                        android:id="@+id/category_money"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/money"/>

                    <com.google.android.material.chip.Chip
                        style="@style/NewsChipStyle"
                        android:id="@+id/category_technology"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/technology"/>

                    <com.google.android.material.chip.Chip
                        style="@style/NewsChipStyle"
                        android:id="@+id/category_crime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/crime"/>

                    <com.google.android.material.chip.Chip
                        style="@style/NewsChipStyle"
                        android:id="@+id/category_politics"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/politics"/>

                </com.google.android.material.chip.ChipGroup>

            </LinearLayout>

        </HorizontalScrollView>

<!--        <ProgressBar-->
<!--            android:id="@+id/progress_bar"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:background="@android:color/transparent"-->
<!--            android:indeterminateTint="@color/appColor"-->
<!--            android:visibility="visible"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            tools:visibility="visible" />-->

        <ImageView
            android:id="@+id/iv_error"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_error"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/tv_error"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tv_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connection_error"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_error" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
